Project/y.output
Grammar

    0 $accept: start $end

    1 start: program '\n'

    2 program: stmt_list

    3 stmt_list: block_stmt
    4          | stmt_list func_def

    5 block_stmt: stmt
    6           | block_stmt stmt
    7           | block_stmt COMMENT

    8 stmt: matched
    9     | unmatched
   10     | error NEWLINE

   11 func_def: FUNCTION_DEF type_def IDENTIFIER LEFT_PARANTHESIS argument_list RIGHT_PARANTHESIS LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET

   12 matched: IF LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS matched ELSE matched
   13        | unconditional_stmt

   14 unmatched: IF LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS stmt
   15          | IF LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS matched ELSE unmatched

   16 argument_list: TYPE_ID IDENTIFIER
   17              | TYPE_ID IDENTIFIER COMMA argument_list
   18              | %empty

   19 unconditional_stmt: assign_stmt
   20                   | declaration_stmt
   21                   | func_call
   22                   | loop
   23                   | reserved_stmt
   24                   | primitive_function_call
   25                   | increment_stmt
   26                   | decrement_stmt

   27 increment_stmt: IDENTIFIER INCREMENT_OP SEMI_COLON

   28 decrement_stmt: IDENTIFIER DECREMENT_OP SEMI_COLON

   29 assign_stmt: IDENTIFIER ASSIGNMENT_OP expression SEMI_COLON

   30 declaration_stmt: TYPE_ID identifier_list SEMI_COLON
   31                 | TYPE_ID identifier_list ASSIGNMENT_OP expression SEMI_COLON

   32 identifier_list: IDENTIFIER
   33                | IDENTIFIER COMMA identifier_list

   34 expression: non_numeric_const
   35           | arith_op
   36           | func_call

   37 type_def: TYPE_ID
   38         | VOID_TYPE

   39 func_call: IDENTIFIER LEFT_PARANTHESIS arguments RIGHT_PARANTHESIS SEMI_COLON
   40          | IDENTIFIER DOT IDENTIFIER SEMI_COLON

   41 arguments: IDENTIFIER
   42          | const
   43          | IDENTIFIER COMMA arguments
   44          | %empty
   45          | const COMMA arguments

   46 reserved_stmt: RETURN SEMI_COLON
   47              | RETURN IDENTIFIER SEMI_COLON
   48              | RETURN const SEMI_COLON
   49              | BREAK SEMI_COLON
   50              | CONTINUE SEMI_COLON

   51 const: numeric_const
   52      | non_numeric_const

   53 numeric_const: INT_LITERAL
   54              | FLOAT_LITERAL

   55 non_numeric_const: BOOL_LITERAL
   56                  | STRING_LITERAL
   57                  | CHAR_LITERAL

   58 arith_op: arith_op ADDITION_OP term
   59         | arith_op SUBTRACTION_OP term
   60         | term

   61 term: term MULTIPLICATION_OP factor
   62     | term DIVISION_OP factor
   63     | factor

   64 factor: numeric_const
   65       | IDENTIFIER
   66       | LEFT_PARANTHESIS arith_op RIGHT_PARANTHESIS

   67 primitive_function_call: DISPLAY_FUNC_CALL LEFT_PARANTHESIS expression RIGHT_PARANTHESIS SEMI_COLON
   68                        | DISPLAY_FUNC_CALL LEFT_PARANTHESIS RIGHT_PARANTHESIS SEMI_COLON
   69                        | READ_DATA_FUNC_CALL LEFT_PARANTHESIS INT_LITERAL RIGHT_PARANTHESIS SEMI_COLON
   70                        | READ_DATA_FUNC_CALL LEFT_PARANTHESIS IDENTIFIER RIGHT_PARANTHESIS SEMI_COLON
   71                        | GET_TIMESTAMP_FUNC_CALL LEFT_PARANTHESIS INT_LITERAL RIGHT_PARANTHESIS SEMI_COLON
   72                        | CONNECT_URL_FUNC_CALL LEFT_PARANTHESIS STRING_LITERAL RIGHT_PARANTHESIS SEMI_COLON
   73                        | SEND_INT_TO_CONNECTION_FUNC_CALL LEFT_PARANTHESIS STRING_LITERAL COMMA IDENTIFIER RIGHT_PARANTHESIS SEMI_COLON
   74                        | SEND_INT_TO_CONNECTION_FUNC_CALL LEFT_PARANTHESIS STRING_LITERAL COMMA INT_LITERAL RIGHT_PARANTHESIS SEMI_COLON
   75                        | RECEIVE_INT_FROM_CONNECTION_FUNC_CALL LEFT_PARANTHESIS STRING_LITERAL RIGHT_PARANTHESIS SEMI_COLON
   76                        | SET_SWITCH_FUNC_CALL LEFT_PARANTHESIS BOOL_LITERAL COMMA INT_LITERAL RIGHT_PARANTHESIS SEMI_COLON
   77                        | SET_SWITCH_FUNC_CALL LEFT_PARANTHESIS IDENTIFIER COMMA INT_LITERAL RIGHT_PARANTHESIS SEMI_COLON
   78                        | SET_SWITCH_FUNC_CALL LEFT_PARANTHESIS BOOL_LITERAL COMMA IDENTIFIER RIGHT_PARANTHESIS SEMI_COLON
   79                        | SET_SWITCH_FUNC_CALL LEFT_PARANTHESIS IDENTIFIER COMMA IDENTIFIER RIGHT_PARANTHESIS SEMI_COLON

   80 loop: do_while
   81     | while_loop
   82     | for_loop

   83 do_while: DO LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET WHILE LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS SEMI_COLON
   84         | DO LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET WHILE LEFT_PARANTHESIS NOT_OP LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS RIGHT_PARANTHESIS SEMI_COLON

   85 while_loop: WHILE LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET
   86           | WHILE LEFT_PARANTHESIS NOT_OP LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS RIGHT_PARANTHESIS LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET

   87 for_loop: FOR LEFT_PARANTHESIS assign_stmt SEMI_COLON condition_list SEMI_COLON for_update RIGHT_PARANTHESIS LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET
   88         | FOR LEFT_PARANTHESIS assign_stmt SEMI_COLON NOT_OP LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS SEMI_COLON for_update RIGHT_PARANTHESIS LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET

   89 for_update: assign_stmt
   90           | func_call

   91 condition_list: and_term
   92               | condition_list LOGICAL_OR_OP and_term
   93               | NOT_OP LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS LOGICAL_OR_OP and_term
   94               | NOT_OP LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS LOGICAL_OR_OP LEFT_PARANTHESIS NOT_OP LEFT_PARANTHESIS and_term RIGHT_PARANTHESIS RIGHT_PARANTHESIS
   95               | condition_list LOGICAL_OR_OP LEFT_PARANTHESIS NOT_OP LEFT_PARANTHESIS and_term RIGHT_PARANTHESIS RIGHT_PARANTHESIS

   96 and_term: condition
   97         | LEFT_PARANTHESIS condition RIGHT_PARANTHESIS
   98         | and_term LOGICAL_AND_OP condition
   99         | IDENTIFIER

  100 condition: BOOL_LITERAL
  101          | IDENTIFIER LESS_THAN_OP IDENTIFIER
  102          | IDENTIFIER GREATER_THAN_OP IDENTIFIER
  103          | IDENTIFIER LESS_THAN_OR_EQUAL_OP IDENTIFIER
  104          | IDENTIFIER GREATER_THAN_OR_EQUAL_OP IDENTIFIER
  105          | IDENTIFIER EQUALITY_OP IDENTIFIER
  106          | IDENTIFIER NOT_EQUAL_OP IDENTIFIER
  107          | numeric_const LESS_THAN_OP IDENTIFIER
  108          | numeric_const GREATER_THAN_OP IDENTIFIER
  109          | numeric_const LESS_THAN_OR_EQUAL_OP IDENTIFIER
  110          | numeric_const GREATER_THAN_OR_EQUAL_OP IDENTIFIER
  111          | numeric_const EQUALITY_OP IDENTIFIER
  112          | numeric_const NOT_EQUAL_OP IDENTIFIER
  113          | numeric_const LESS_THAN_OP numeric_const
  114          | numeric_const GREATER_THAN_OP numeric_const
  115          | numeric_const LESS_THAN_OR_EQUAL_OP numeric_const
  116          | numeric_const GREATER_THAN_OR_EQUAL_OP numeric_const
  117          | numeric_const EQUALITY_OP numeric_const
  118          | numeric_const NOT_EQUAL_OP numeric_const


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1
    error (256) 10
    COMMENT (258) 7
    INT_LITERAL (259) 53 69 71 74 76 77
    FLOAT_LITERAL (260) 54
    BOOL_LITERAL (261) 55 76 78 100
    CHAR_LITERAL (262) 57
    STRING_LITERAL (263) 56 72 73 74 75
    ADDITION_OP (264) 58
    SUBTRACTION_OP (265) 59
    MULTIPLICATION_OP (266) 61
    DIVISION_OP (267) 62
    LESS_THAN_OP (268) 101 107 113
    GREATER_THAN_OP (269) 102 108 114
    LESS_THAN_OR_EQUAL_OP (270) 103 109 115
    GREATER_THAN_OR_EQUAL_OP (271) 104 110 116
    EQUALITY_OP (272) 105 111 117
    ASSIGNMENT_OP (273) 29 31
    SEMI_COLON (274) 27 28 29 30 31 39 40 46 47 48 49 50 67 68 69 70 71 72 73 74 75 76 77 78 79 83 84 87 88
    COMMA (275) 17 33 43 45 73 74 76 77 78 79
    DOT (276) 40
    NOT_OP (277) 84 86 88 93 94 95
    NOT_EQUAL_OP (278) 106 112 118
    LOGICAL_AND_OP (279) 98
    LOGICAL_OR_OP (280) 92 93 94 95
    INCREMENT_OP (281) 27
    DECREMENT_OP (282) 28
    DO (283) 83 84
    FOR (284) 87 88
    WHILE (285) 83 84 85 86
    BREAK (286) 49
    CONTINUE (287) 50
    RETURN (288) 46 47 48
    READ_DATA_FUNC_CALL (289) 69 70
    GET_TIMESTAMP_FUNC_CALL (290) 71
    DISPLAY_FUNC_CALL (291) 67 68
    CONNECT_URL_FUNC_CALL (292) 72
    SEND_INT_TO_CONNECTION_FUNC_CALL (293) 73 74
    RECEIVE_INT_FROM_CONNECTION_FUNC_CALL (294) 75
    SET_SWITCH_FUNC_CALL (295) 76 77 78 79
    FUNCTION_DEF (296) 11
    IF (297) 12 14 15
    ELSE (298) 12 15
    LEFT_PARANTHESIS (299) 11 12 14 15 39 66 67 68 69 70 71 72 73 74 75 76 77 78 79 83 84 85 86 87 88 93 94 95 97
    RIGHT_PARANTHESIS (300) 11 12 14 15 39 66 67 68 69 70 71 72 73 74 75 76 77 78 79 83 84 85 86 87 88 93 94 95 97
    LEFT_CURLY_BRACKET (301) 11 83 84 85 86 87 88
    RIGHT_CURLY_BRACKET (302) 11 83 84 85 86 87 88
    TYPE_ID (303) 16 17 30 31 37
    IDENTIFIER (304) 11 16 17 27 28 29 32 33 39 40 41 43 47 65 70 73 77 78 79 99 101 102 103 104 105 106 107 108 109 110 111 112
    NEWLINE (305) 10
    VOID_TYPE (306) 38


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    start (54)
        on left: 1
        on right: 0
    program (55)
        on left: 2
        on right: 1
    stmt_list (56)
        on left: 3 4
        on right: 2 4
    block_stmt (57)
        on left: 5 6 7
        on right: 3 6 7 11 83 84 85 86 87 88
    stmt (58)
        on left: 8 9 10
        on right: 5 6 14
    func_def (59)
        on left: 11
        on right: 4
    matched (60)
        on left: 12 13
        on right: 8 12 15
    unmatched (61)
        on left: 14 15
        on right: 9 15
    argument_list (62)
        on left: 16 17 18
        on right: 11 17
    unconditional_stmt (63)
        on left: 19 20 21 22 23 24 25 26
        on right: 13
    increment_stmt (64)
        on left: 27
        on right: 25
    decrement_stmt (65)
        on left: 28
        on right: 26
    assign_stmt (66)
        on left: 29
        on right: 19 87 88 89
    declaration_stmt (67)
        on left: 30 31
        on right: 20
    identifier_list (68)
        on left: 32 33
        on right: 30 31 33
    expression (69)
        on left: 34 35 36
        on right: 29 31 67
    type_def (70)
        on left: 37 38
        on right: 11
    func_call (71)
        on left: 39 40
        on right: 21 36 90
    arguments (72)
        on left: 41 42 43 44 45
        on right: 39 43 45
    reserved_stmt (73)
        on left: 46 47 48 49 50
        on right: 23
    const (74)
        on left: 51 52
        on right: 42 45 48
    numeric_const (75)
        on left: 53 54
        on right: 51 64 107 108 109 110 111 112 113 114 115 116 117 118
    non_numeric_const (76)
        on left: 55 56 57
        on right: 34 52
    arith_op (77)
        on left: 58 59 60
        on right: 35 58 59 66
    term (78)
        on left: 61 62 63
        on right: 58 59 60 61 62
    factor (79)
        on left: 64 65 66
        on right: 61 62 63
    primitive_function_call (80)
        on left: 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 24
    loop (81)
        on left: 80 81 82
        on right: 22
    do_while (82)
        on left: 83 84
        on right: 80
    while_loop (83)
        on left: 85 86
        on right: 81
    for_loop (84)
        on left: 87 88
        on right: 82
    for_update (85)
        on left: 89 90
        on right: 87 88
    condition_list (86)
        on left: 91 92 93 94 95
        on right: 12 14 15 83 84 85 86 87 88 92 93 94 95
    and_term (87)
        on left: 96 97 98 99
        on right: 91 92 93 94 95 98
    condition (88)
        on left: 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118
        on right: 96 97 98


State 0

    0 $accept: . start $end

    error                                  shift, and go to state 1
    DO                                     shift, and go to state 2
    FOR                                    shift, and go to state 3
    WHILE                                  shift, and go to state 4
    BREAK                                  shift, and go to state 5
    CONTINUE                               shift, and go to state 6
    RETURN                                 shift, and go to state 7
    READ_DATA_FUNC_CALL                    shift, and go to state 8
    GET_TIMESTAMP_FUNC_CALL                shift, and go to state 9
    DISPLAY_FUNC_CALL                      shift, and go to state 10
    CONNECT_URL_FUNC_CALL                  shift, and go to state 11
    SEND_INT_TO_CONNECTION_FUNC_CALL       shift, and go to state 12
    RECEIVE_INT_FROM_CONNECTION_FUNC_CALL  shift, and go to state 13
    SET_SWITCH_FUNC_CALL                   shift, and go to state 14
    IF                                     shift, and go to state 15
    TYPE_ID                                shift, and go to state 16
    IDENTIFIER                             shift, and go to state 17

    start                    go to state 18
    program                  go to state 19
    stmt_list                go to state 20
    block_stmt               go to state 21
    stmt                     go to state 22
    matched                  go to state 23
    unmatched                go to state 24
    unconditional_stmt       go to state 25
    increment_stmt           go to state 26
    decrement_stmt           go to state 27
    assign_stmt              go to state 28
    declaration_stmt         go to state 29
    func_call                go to state 30
    reserved_stmt            go to state 31
    primitive_function_call  go to state 32
    loop                     go to state 33
    do_while                 go to state 34
    while_loop               go to state 35
    for_loop                 go to state 36


State 1

   10 stmt: error . NEWLINE

    NEWLINE  shift, and go to state 37


State 2

   83 do_while: DO . LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET WHILE LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS SEMI_COLON
   84         | DO . LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET WHILE LEFT_PARANTHESIS NOT_OP LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS RIGHT_PARANTHESIS SEMI_COLON

    LEFT_CURLY_BRACKET  shift, and go to state 38


State 3

   87 for_loop: FOR . LEFT_PARANTHESIS assign_stmt SEMI_COLON condition_list SEMI_COLON for_update RIGHT_PARANTHESIS LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET
   88         | FOR . LEFT_PARANTHESIS assign_stmt SEMI_COLON NOT_OP LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS SEMI_COLON for_update RIGHT_PARANTHESIS LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET

    LEFT_PARANTHESIS  shift, and go to state 39


State 4

   85 while_loop: WHILE . LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET
   86           | WHILE . LEFT_PARANTHESIS NOT_OP LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS RIGHT_PARANTHESIS LEFT_CURLY_BRACKET block_stmt RIGHT_CURLY_BRACKET

    LEFT_PARANTHESIS  shift, and go to state 40


State 5

   49 reserved_stmt: BREAK . SEMI_COLON

    SEMI_COLON  shift, and go to state 41


State 6

   50 reserved_stmt: CONTINUE . SEMI_COLON

    SEMI_COLON  shift, and go to state 42


State 7

   46 reserved_stmt: RETURN . SEMI_COLON
   47              | RETURN . IDENTIFIER SEMI_COLON
   48              | RETURN . const SEMI_COLON

    INT_LITERAL     shift, and go to state 43
    FLOAT_LITERAL   shift, and go to state 44
    BOOL_LITERAL    shift, and go to state 45
    CHAR_LITERAL    shift, and go to state 46
    STRING_LITERAL  shift, and go to state 47
    SEMI_COLON      shift, and go to state 48
    IDENTIFIER      shift, and go to state 49

    const              go to state 50
    numeric_const      go to state 51
    non_numeric_const  go to state 52


State 8

   69 primitive_function_call: READ_DATA_FUNC_CALL . LEFT_PARANTHESIS INT_LITERAL RIGHT_PARANTHESIS SEMI_COLON
   70                        | READ_DATA_FUNC_CALL . LEFT_PARANTHESIS IDENTIFIER RIGHT_PARANTHESIS SEMI_COLON

    LEFT_PARANTHESIS  shift, and go to state 53


State 9

   71 primitive_function_call: GET_TIMESTAMP_FUNC_CALL . LEFT_PARANTHESIS INT_LITERAL RIGHT_PARANTHESIS SEMI_COLON

    LEFT_PARANTHESIS  shift, and go to state 54


State 10

   67 primitive_function_call: DISPLAY_FUNC_CALL . LEFT_PARANTHESIS expression RIGHT_PARANTHESIS SEMI_COLON
   68                        | DISPLAY_FUNC_CALL . LEFT_PARANTHESIS RIGHT_PARANTHESIS SEMI_COLON

    LEFT_PARANTHESIS  shift, and go to state 55


State 11

   72 primitive_function_call: CONNECT_URL_FUNC_CALL . LEFT_PARANTHESIS STRING_LITERAL RIGHT_PARANTHESIS SEMI_COLON

    LEFT_PARANTHESIS  shift, and go to state 56


State 12

   73 primitive_function_call: SEND_INT_TO_CONNECTION_FUNC_CALL . LEFT_PARANTHESIS STRING_LITERAL COMMA IDENTIFIER RIGHT_PARANTHESIS SEMI_COLON
   74                        | SEND_INT_TO_CONNECTION_FUNC_CALL . LEFT_PARANTHESIS STRING_LITERAL COMMA INT_LITERAL RIGHT_PARANTHESIS SEMI_COLON

    LEFT_PARANTHESIS  shift, and go to state 57


State 13

   75 primitive_function_call: RECEIVE_INT_FROM_CONNECTION_FUNC_CALL . LEFT_PARANTHESIS STRING_LITERAL RIGHT_PARANTHESIS SEMI_COLON

    LEFT_PARANTHESIS  shift, and go to state 58


State 14

   76 primitive_function_call: SET_SWITCH_FUNC_CALL . LEFT_PARANTHESIS BOOL_LITERAL COMMA INT_LITERAL RIGHT_PARANTHESIS SEMI_COLON
   77                        | SET_SWITCH_FUNC_CALL . LEFT_PARANTHESIS IDENTIFIER COMMA INT_LITERAL RIGHT_PARANTHESIS SEMI_COLON
   78                        | SET_SWITCH_FUNC_CALL . LEFT_PARANTHESIS BOOL_LITERAL COMMA IDENTIFIER RIGHT_PARANTHESIS SEMI_COLON
   79                        | SET_SWITCH_FUNC_CALL . LEFT_PARANTHESIS IDENTIFIER COMMA IDENTIFIER RIGHT_PARANTHESIS SEMI_COLON

    LEFT_PARANTHESIS  shift, and go to state 59


State 15

   12 matched: IF . LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS matched ELSE matched
   14 unmatched: IF . LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS stmt
   15          | IF . LEFT_PARANTHESIS condition_list RIGHT_PARANTHESIS matched ELSE unmatched

    LEFT_PARANTHESIS  shift, and go to state 60


State 16

   30 declaration_stmt: TYPE_ID . identifier_list SEMI_COLON
   31                 | TYPE_ID . identifier_list ASSIGNMENT_OP expression SEMI_COLON

    IDENTIFIER  shift, and go to state 61

    identifier_list  go to state 62


State 17

   27 increment_stmt: IDENTIFIER . INCREMENT_OP SEMI_COLON
   28 decrement_stmt: IDENTIFIER . DECREMENT_OP SEMI_COLON
   29 assign_stmt: IDENTIFIER . ASSIGNMENT_OP expression SEMI_COLON
   39 func_call: IDENTIFIER . LEFT_PARANTHESIS arguments RIGHT_PARANTHESIS SEMI_COLON
   40          | IDENTIFIER . DOT IDENTIFIER SEMI_COLON
